--- a/Dita/app/src/main/res/values/strings.xml
+++ b/Dita/app/src/main/res/values/strings.xml
@@ -1,9 +1,19 @@
 <resources>
     <string name="app_name">Dita</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
     <string name="speech_prompt">Say something&#8230;</string>
     <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
     <string name="tap_on_mic">Tap on mic to speak</string>
     <string name="pesquisar">Pesquisar</string>
+
+    <string name="selecione_um_idioma">Selecione um idioma</string>
+    <string name="digite_o_texto_para_falar">Carregando o texto para falar</string>
+    <string name="falar">Falar</string>
+    <string name="idioma_nao_suportado">Idioma não suportado></string>
+    <string name="falha_na_inicializacao">Falha na inialização do mSpeech></string>
+
+    <string-array name="locale_arrays">
+            <item>Português</item>
+        </string-array>
+
 </resources>
